--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -5,7 +5,7 @@
   "objectWrap": "preserve",
   "printWidth": 120,
   "quoteProps": "consistent",
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
