--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"seeder/**/*.ts\" \"test/**/*.ts\"",
-    "seed": "nest start --config seeder/nest-cli.json",
+    "seed": "npx ts-node src/seeder/seed.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "dev": "nest start --watch",
