--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "prettier": "^3.5.2",
+    "react-redux": "^9.2.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
