--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"seeder/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "nest start --config src/seeder/nest-cli.json",
     "start": "nest start",
     "start:dev": "nest start --watch",
