--- a/api/package.json
+++ b/api/package.json
@@ -58,6 +58,7 @@
     "@types/csurf": "^1.11.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-local": "^1.0.38",
@@ -67,6 +68,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
