--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.4.6",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "notistack": "^3.0.2",
@@ -24,7 +25,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
