--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -36,13 +36,16 @@
     "csurf": "^1.10.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "express": "^5.0.1",
     "google-auth-library": "^9.15.1",
     "mongoose": "^8.11.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -63,6 +66,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.2",
