--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,11 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "nest start --config src/seeder/nest-cli.json",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "debug": "nest start --debug --watch",
+    "start": "dotenvx run -- nest start",
+    "start:dev": "dotenvx run -f .env.development -- nest start --watch",
+    "dev": "dotenvx run -f .env.development -- nest start --watch",
+    "start:debug": "dotenvx run -f .env.development -- nest start --debug --watch",
+    "debug": "dotenvx run -f .env.development -- nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.38.5",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.1",
@@ -35,7 +36,6 @@
     "cookie-parser": "^1.4.7",
     "csurf": "^1.10.0",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "google-auth-library": "^9.15.1",
     "mongoose": "^8.11.0",
