--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "check-password-strength": "^3.0.0",
     "dayjs": "^1.11.13",
     "notistack": "^3.0.2",
+    "path-browserify": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@mui/x-data-grid": "^7.27.3",
+    "@types/path-browserify": "^1.0.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
