--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.10"
   },
