--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.7",
+    "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.27.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.0",
@@ -26,6 +27,7 @@
     "dayjs": "^1.11.13",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
