[JE2-208] Installed Shadcn, added button component to test how this library works

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,16 @@
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.27.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
     "check-password-strength": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.487.0",
     "notistack": "^3.0.2",
     "path-browserify": "^1.0.1",
     "react": "^19.0.0",
@@ -35,7 +39,9 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.0.10"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.0.10",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -43,6 +49,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
     "@types/path-browserify": "^1.0.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
