--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,12 +36,14 @@
     "check-password-strength": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.487.0",
     "notistack": "^3.0.2",
     "path-browserify": "^1.0.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
