--- a/api/package.json
+++ b/api/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
