--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.10",
     "@tanstack/react-table": "^8.21.2",
+    "@testing-library/dom": "^10.4.0",
     "axios": "^1.8.1",
     "check-password-strength": "^3.0.0",
     "class-variance-authority": "^0.7.1",
@@ -51,7 +52,8 @@
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.10",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
