--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.27.3",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
