Backend jest tests.

--- a/api/package.json
+++ b/api/package.json
@@ -98,6 +98,10 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      "dist"
+    ],
     "coverageDirectory": "./coverage",
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1"
