--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.487.0",
     "notistack": "^3.0.2",
     "path-browserify": "^1.0.1",
@@ -61,6 +62,8 @@
     "tailwindcss": "^4.0.10",
     "tw-animate-css": "^1.2.5",
     "util": "^0.12.5",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -68,6 +71,7 @@
     "@mui/x-data-grid": "^7.27.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@types/path-browserify": "^1.0.3",
