--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,35 +16,36 @@ jobs:
           ref: main
           path: /src
 
-      - name: Install key
-        uses: webfactory/ssh-agent@v0.9.0
+      - name: Install keys
+        uses: shimataro/ssh-key-action@v2
         with:
-          ssh-private-key: ${{ secrets.PUBLIC_IP }}
+          key: ${{ secrets.SSH_DEPLOYMENT_KEY }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: Copy project source to remote
+      - name: Copy project source to the remote
         run: |
-          scp -r /src ${{ secrets.PRINCIPAL }}@${{ secrets.PUBLIC_IP }}:/src
+          scp -r /src ${{ secrets.PRINCIPAL }}@${{ secrets.HOST }}:/src
 
-      - name: Build project on remote
+      - name: Build project on the remote
         run: |
-          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.PUBLIC_IP }} \
+          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.HOST }} \
             cd /src && \
             docker compose build
         env:
-          PUBLIC_API: ${{ secrets.PUBLIC_IP }}        
+          API_HOST: ${{ secrets.HOST }}
 
-      - name: Delete project source from remote
+      - name: Delete project source from the remote
         run: |
-          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.PUBLIC_IP }} \
+          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.HOST }} \
             rm -rf /src/!(docker-compose.yaml)
                    
-      - name: Start project on remote
+      - name: Start project on the remote
         run: |
-          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.PUBLIC_IP }} \
+          ssh ${{ secrets.PRINCIPAL }}@${{ secrets.HOST }} \
             cd /src && \
             docker compose up
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          ORIGIN: ${{ secrets.PUBLIC_IP }}
+          WEB_HOST: ${{ secrets.HOST }}
           MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
           MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
