--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - 8000:8000
     environment:
       - JWT_SECRET=${JWT_SECRET}
-      - ORIGIN=${PUBLIC_WEB}
+      - ORIGIN=${WEB_HOST}
       - MONGO_HOST=db
       - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
@@ -35,7 +35,7 @@ services:
       context: frontend
       dockerfile: Dockerfile
       args:
-        - public_api=${PUBLIC_API}
+        - apiHost=${API_HOST}
       network: host
     ports:
       - 80:80
