--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,7 +8,7 @@ FROM node:22.15.0
 ENV NODE_ENV=production
 WORKDIR /app
 COPY --from=builder /app/dist/. .
-COPY package.json package-lock.json .
+COPY package.json package-lock.json ./
 RUN npm i
 EXPOSE 8000
 ENTRYPOINT ["node", "main.js"]
