--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
 # syntax=docker.io/docker/dockerfile:1.7-labs
 
 FROM node:22.15.0 AS builder
-ARG public_api=localhost
+ARG API_HOST=localhost
 WORKDIR /app
 COPY --exclude=nginx . .
-RUN echo VITE_API_HOST=${apiHost} > .env.production
+RUN echo VITE_API_HOST=${API_HOST} > .env.production
 RUN npm i
 RUN npm run build
 
