JE2-305 database persisstence and seeding added

--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -1,10 +1,11 @@
 **/dist
 **/node_modules
 **/.gitingore
+**/.dockerignore
 **/.editorconfig
 **/.prettierrc
-Dockerfile
-.env.development
+**/*Dockerfile
+.*
+.env*
 test
-src/seeder
 uploads
