--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,9 +1,11 @@
 **/dist
 **/node_modules
 **/.gitingore
+**/.dockerignore
 **/.editorconfig
 **/.prettierrc
-Dockerfile
-.env.development
+**/*Dockerfile
+.*
+.env*
 src/tests
 jest*
