--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,5 @@ RUN npm i
 RUN npm run build
 
 FROM nginx:latest
-COPY --from=builder /app/dist/. /usr/share/nginx/html/
+COPY --from=builder /app/dist /usr/share/nginx/html/
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
