--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,13 @@
 # syntax=docker.io/docker/dockerfile:1.7-labs
 
 FROM node:22.15.0 AS builder
-ARG API_HOST=localhost
 WORKDIR /app
-COPY --exclude=nginx . .
-RUN echo VITE_API_HOST=${API_HOST} > .env.production
+COPY package.json package-lock.json ./
 RUN npm i
+ARG API_HOST=localhost
+RUN echo VITE_API_HOST=${API_HOST} > .env.production
+ARG KEEP_CACHE=1
+COPY --exclude=nginx --exclude=package.json --exclude=package-lock.json . .
 RUN npm run build
 
 FROM nginx:latest
